<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/x"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/x"
            android:textSize="18dp"
            android:text="13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/y"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/y"
            android:textSize="18dp"
            android:text="67"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/note"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/note"
            android:textSize="18dp"
            android:text="This is a sample note."
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/which"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/which"
            android:textSize="18dp"
            android:text="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:text="@string/addbutton"
            android:onClick="addButtonOnClick"
            android:textSize="18dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/deletebutton"
            android:onClick="deleteButtonOnClick"
            android:textSize="18dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:text="@string/showbutton"
            android:onClick="showButtonOnClick"
            android:textSize="18dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/showallbutton"
            android:onClick="showAllButtonOnClick"
            android:textSize="18dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview"
            android:textSize="18dp"
            android:maxLines="30"
            android:singleLine="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </ScrollView>

</LinearLayout>
